# fabagent-rag

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
data/eval/: README.md  full_test_dataset_plan.md  rag_eval_set.jsonl  raw_dataset_selection.md
docs/: dataset-collection-checklist.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: rag.ts
frontend/src/components/: AskPanel.tsx  FileUploadPanel.tsx
frontend/src/types/: rag.ts
scripts/: dev.sh  dry_run_parse_chunk.py  eval.py  eval.sh  ingest_all.sh  reset_milvus.py
src/fabagent_rag/: __init__.py  api.py  chunking.py  cli.py  config.py  documents.py  embeddings.py  evaluation.py  full_ingest.py  intent.py  keyword_store.py  llm.py  milvus_store.py  query_planner.py  rag_service.py
